# zeroMq

./: CMakeLists.txt  Client.cpp  Client.h  README.md  Test.scn  ZMQServerComponent.cpp  ZMQServerComponent.h  initZeroMq.cpp  initZeroMq.h
